documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32NET.VB

    Public Declare Function AX1_DllUsageCount Lib "AX1W32.DLL" Alias "_AX1_DllUsageCount@0" () As Integer
    Public Declare Function AX1_DMAInstall Lib "AX1W32.DLL" Alias "_AX1_DMAInstall@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_DMAInstallEx Lib "AX1W32.DLL" Alias "_AX1_DMAInstallEx@8" (ByVal size As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_DMAPipeClose Lib "AX1W32.DLL" Alias "_AX1_DMAPipeClose@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_DMAPipeOpen Lib "AX1W32.DLL" Alias "_AX1_DMAPipeOpen@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_DMAUninstall Lib "AX1W32.DLL" Alias "_AX1_DMAUninstall@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_DMAWorkerEntry Lib "AX1W32.DLL" Alias "_AX1_DMAWorkerEntry@4" (ByRef lpParam As Integer) As Integer
    Public Declare Function AX1_DMAWorkerGetBusyCount Lib "AX1W32.DLL" Alias "_AX1_DMAWorkerGetBusyCount@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_DMAWorkerIsPause Lib "AX1W32.DLL" Alias "_AX1_DMAWorkerIsPause@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_DMAWorkerPause Lib "AX1W32.DLL" Alias "_AX1_DMAWorkerPause@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_DMAWorkerStart Lib "AX1W32.DLL" Alias "_AX1_DMAWorkerStart@12" (ByRef pVirt As Integer, ByVal sizeval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_DMAWorkerStop Lib "AX1W32.DLL" Alias "_AX1_DMAWorkerStop@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_DMAWorkerUnpause Lib "AX1W32.DLL" Alias "_AX1_DMAWorkerUnpause@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_ErrCtrlGetConfig Lib "AX1W32.DLL" Alias "_AX1_ErrCtrlGetConfig@16" (ByRef pconfigval As Integer, ByRef ptrigid As Short, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_ErrDesc Lib "AX1W32.DLL" Alias "_AX1_ErrDesc@4" (ByVal errval As Integer) As String
    Public Declare Function AX1_ErrDescStr Lib "AX1W32.DLL" Alias "_AX1_ErrDescStr@4" (ByVal errval As Integer) As String
    Public Declare Function AX1_ErrName Lib "AX1W32.DLL" Alias "_AX1_ErrName@4" (ByVal errval As Integer) As String
    Public Declare Function AX1_ErrNetGetEnable Lib "AX1W32.DLL" Alias "_AX1_ErrNetGetEnable@16" (ByRef pconfigval As Integer, ByRef ptrigid As Short, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_ErrPktGetConfig Lib "AX1W32.DLL" Alias "_AX1_ErrPktGetConfig@16" (ByRef pconfigval As Integer, ByRef pblendflags As Integer, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_ErrPktGetConfigEx Lib "AX1W32.DLL" Alias "_AX1_ErrPktGetConfigEx@32" (ByRef pconfigval As Integer, ByRef pblendflags As Integer, ByRef ptrigid As Short, ByRef packet As Byte, ByVal pktlen As Short, ByRef ptotallen As Short, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_ErrRSNGetConfig Lib "AX1W32.DLL" Alias "_AX1_ErrRSNGetConfig@20" (ByRef pconfigval As Integer, ByRef ptrigid As Short, ByRef pmodifier As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_ErrXmtGetConfig Lib "AX1W32.DLL" Alias "_AX1_ErrXmtGetConfig@16" (ByRef pconfigval As Integer, ByRef ptrigid As Short, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_EventGetConfig Lib "AX1W32.DLL" Alias "_AX1_EventGetConfig@8" (ByRef pconfigval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Sub AX1_ExpandMant Lib "AX1W32.DLL" Alias "_AX1_ExpandMant@8" (ByRef mant As Integer, ByRef exp As Integer)
    Public Declare Function AX1_FDSCalcOffset Lib "AX1W32.DLL" Alias "_AX1_FDSCalcOffset@20" (ByRef buf As Byte, ByVal fds_desc As FDSDESC, ByVal ds_num As Integer) As Integer
    Public Declare Function AX1_FDSStatusPriority Lib "AX1W32.DLL" Alias "_AX1_FDSStatusPriority@8" (ByVal prevstatus As Byte, ByVal status As Byte) As Byte
    Public Declare Sub AX1_FileClose Lib "AX1W32.DLL" Alias "_AX1_FileClose@0" ()
    Public Declare Function AX1_FileErr Lib "AX1W32.DLL" Alias "_AX1_FileErr@0" () As Integer
    Public Declare Sub AX1_FileErrClr Lib "AX1W32.DLL" Alias "_AX1_FileErrClr@0" ()
    Public Declare Sub AX1_FileErrSet Lib "AX1W32.DLL" Alias "_AX1_FileErrSet@0" ()
    Public Declare Function AX1_FileOpenRead Lib "AX1W32.DLL" Alias "_AX1_FileOpenRead@4" (ByVal filename As String) As Integer
    Public Declare Function AX1_FileOpenWrite Lib "AX1W32.DLL" Alias "_AX1_FileOpenWrite@4" (ByVal filename As String) As Integer
    Public Declare Function AX1_FileRead Lib "AX1W32.DLL" Alias "_AX1_FileRead@8" (ByRef buffer As Integer, ByVal count As Short) As Integer
    Public Declare Function AX1_FileSeek Lib "AX1W32.DLL" Alias "_AX1_FileSeek@4" (ByVal offset As Integer) As Integer
    Public Declare Function AX1_FileTell Lib "AX1W32.DLL" Alias "_AX1_FileTell@0" () As Integer
    Public Declare Function AX1_FileWrite Lib "AX1W32.DLL" Alias "_AX1_FileWrite@8" (ByRef buffer As Integer, ByVal count As Short) As Integer
    Public Declare Function AX1_GetHigh Lib "AX1W32.DLL" Alias "_AX1_GetHigh@4" (ByVal val As Integer) As Short
    Public Declare Function AX1_GetLow Lib "AX1W32.DLL" Alias "_AX1_GetLow@4" (ByVal val As Integer) As Short
    Public Declare Function AX1_HandleClose Lib "AX1W32.DLL" Alias "_AX1_HandleClose@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_HandleDel Lib "AX1W32.DLL" Alias "_AX1_HandleDel@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_HandleGet Lib "AX1W32.DLL" Alias "_AX1_HandleGet@24" (ByRef addr0 As Integer, ByRef addr1 As Integer, ByRef cardnum As Integer, ByRef devnum As Integer, ByRef sizval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_HandleIns Lib "AX1W32.DLL" Alias "_AX1_HandleIns@20" (ByRef lpHandle As Integer, ByVal cardname As String, ByVal cardnum As Integer, ByRef hAppWnd As Integer, ByVal uiRemovalMsg As Short) As Integer
    Public Declare Function AX1_HandleOkay Lib "AX1W32.DLL" Alias "_AX1_HandleOkay@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_HandleOpen Lib "AX1W32.DLL" Alias "_AX1_HandleOpen@12" (ByVal cardname As String, ByVal cardnum As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_HandleOpenWin95 Lib "AX1W32.DLL" Alias "_AX1_HandleOpenWin95@12" (ByVal cardname As String, ByVal cardnum As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_HandleOpenWinNT Lib "AX1W32.DLL" Alias "_AX1_HandleOpenWinNT@12" (ByVal cardname As String, ByVal cardnum As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_HandleVer Lib "AX1W32.DLL" Alias "_AX1_HandleVer@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_KernDev Lib "AX1W32.DLL" Alias "_AX1_KernDev@8" (ByRef valueptr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_KernEnd Lib "AX1W32.DLL" Alias "_AX1_KernEnd@4" (ByRef vxdptr As Integer) As Integer
    Public Declare Function AX1_KernIntClear Lib "AX1W32.DLL" Alias "_AX1_KernIntClear@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_KernIntInstall Lib "AX1W32.DLL" Alias "_AX1_KernIntInstall@36" (ByRef hEvent As Integer, ByVal clraddr As Integer, ByVal clrwidth As Integer, ByVal clrvalue As Integer, ByVal stataddr As Integer, ByVal statwidth As Integer, ByVal statvalue As Integer, ByVal statmask As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_KernIntStatus Lib "AX1W32.DLL" Alias "_AX1_KernIntStatus@8" (ByRef valueptr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_KernIntUninstall Lib "AX1W32.DLL" Alias "_AX1_KernIntUninstall@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_KernIORdW Lib "AX1W32.DLL" Alias "_AX1_KernIORdW@12" (ByRef valueptr As Short, ByVal addrval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_KernIOWrW Lib "AX1W32.DLL" Alias "_AX1_KernIOWrW@12" (ByVal value As Short, ByVal addrval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_KernMEMFillW Lib "AX1W32.DLL" Alias "_AX1_KernMEMFillW@20" (ByVal value As Short, ByVal addrval As Integer, ByVal countval As Integer, ByVal bustype As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_KernMEMRdB Lib "AX1W32.DLL" Alias "_AX1_KernMEMRdB@16" (ByRef valueptr As Byte, ByVal addrval As Integer, ByVal bustype As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_KernMEMRdL Lib "AX1W32.DLL" Alias "_AX1_KernMEMRdL@16" (ByRef valueptr As Integer, ByVal addrval As Integer, ByVal bustype As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_KernMEMRdsL Lib "AX1W32.DLL" Alias "_AX1_KernMEMRdsL@20" (ByRef bufptr As Integer, ByVal addrval As Integer, ByVal countval As Integer, ByVal bustype As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_KernMEMRdsW Lib "AX1W32.DLL" Alias "_AX1_KernMEMRdsW@20" (ByRef bufptr As Short, ByVal addrval As Integer, ByVal countval As Integer, ByVal bustype As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_KernMEMRdW Lib "AX1W32.DLL" Alias "_AX1_KernMEMRdW@16" (ByRef valueptr As Short, ByVal addrval As Integer, ByVal bustype As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_KernMEMWrB Lib "AX1W32.DLL" Alias "_AX1_KernMEMWrB@16" (ByVal value As Byte, ByVal addrval As Integer, ByVal bustype As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_KernMEMWrL Lib "AX1W32.DLL" Alias "_AX1_KernMEMWrL@16" (ByVal value As Integer, ByVal addrval As Integer, ByVal bustype As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_KernMEMWrsL Lib "AX1W32.DLL" Alias "_AX1_KernMEMWrsL@20" (ByRef bufptr As Integer, ByVal addrval As Integer, ByVal countval As Integer, ByVal bustype As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_KernMEMWrsW Lib "AX1W32.DLL" Alias "_AX1_KernMEMWrsW@20" (ByRef bufptr As Short, ByVal addrval As Integer, ByVal countval As Integer, ByVal bustype As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_KernMEMWrW Lib "AX1W32.DLL" Alias "_AX1_KernMEMWrW@16" (ByVal value As Short, ByVal addrval As Integer, ByVal bustype As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_KernQuick Lib "AX1W32.DLL" Alias "_AX1_KernQuick@8" (ByVal flag As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_KernStatus Lib "AX1W32.DLL" Alias "_AX1_KernStatus@12" (ByRef valueptr As Integer, ByVal type As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_KernStatusEx Lib "AX1W32.DLL" Alias "_AX1_KernStatusEx@16" (ByRef valueptr As Integer, ByVal type As Integer, ByVal index As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_MakeLong Lib "AX1W32.DLL" Alias "_AX1_MakeLong@8" (ByVal valh As Short, ByVal vall As Short) As Integer
    Public Declare Function AX1_MantFromAscii Lib "AX1W32.DLL" Alias "_AX1_MantFromAscii@12" (ByVal str As String, ByRef mant As Integer, ByRef exp As Integer) As Integer
    Public Declare Function AX1_MantToAscii Lib "AX1W32.DLL" Alias "_AX1_MantToAscii@12" (ByVal buf As String, ByVal mant As Integer, ByVal exp As Integer) As String
